cyclone-compiled/include/dds/dds.h


struct ddsi_sertype;
struct ddsi_serdata;
typedef enum dds_sample_state
{
  DDS_SST_READ = DDS_READ_SAMPLE_STATE, 
  DDS_SST_NOT_READ = DDS_NOT_READ_SAMPLE_STATE 
}
dds_sample_state_t;
typedef enum dds_view_state
{
  DDS_VST_NEW = DDS_NEW_VIEW_STATE,
  DDS_VST_OLD = DDS_NOT_NEW_VIEW_STATE
}
dds_view_state_t;
typedef enum dds_instance_state
{
  DDS_IST_ALIVE = DDS_ALIVE_INSTANCE_STATE,
  DDS_IST_NOT_ALIVE_DISPOSED = DDS_NOT_ALIVE_DISPOSED_INSTANCE_STATE,
  DDS_IST_NOT_ALIVE_NO_WRITERS = DDS_NOT_ALIVE_NO_WRITERS_INSTANCE_STATE
}
dds_instance_state_t;
typedef struct dds_sample_info
{
  dds_sample_state_t sample_state;
  dds_view_state_t view_state;
  dds_instance_state_t instance_state;
  bool valid_data;
  dds_time_t source_timestamp;
  dds_instance_handle_t instance_handle;
  dds_instance_handle_t publication_handle;
  uint32_t disposed_generation_count;
  uint32_t no_writers_generation_count;
  uint32_t sample_rank;
  uint32_t generation_rank;
  uint32_t absolute_generation_rank;
}
dds_sample_info_t;
DDS_EXPORT dds_return_t
dds_delete(dds_entity_t entity);
DDS_EXPORT const struct ddsi_sertype *
dds_get_topic_sertype(dds_entity_t topic);
DDS_EXPORT struct ddsi_serdata *dds_serdata_ref(struct ddsi_serdata *serdata);
DDS_EXPORT void dds_serdata_unref(struct ddsi_serdata *serdata);
DDS_EXPORT uint32_t dds_serdata_size(const struct ddsi_serdata *serdata);
DDS_EXPORT void dds_serdata_to_ser(const struct ddsi_serdata *serdata, size_t off, size_t sz, void *buf);
DDS_EXPORT struct ddsi_serdata *dds_serdata_from_ser_iov(const struct ddsi_sertype *type, int kind, uint32_t niov, const ddsrt_iovec_t *iov, size_t size);
DDS_EXPORT dds_entity_t
dds_create_participant(
  const dds_domainid_t domain,
  const dds_qos_t *qos,
  const dds_listener_t *listener);
DDS_EXPORT dds_entity_t
dds_create_topic(
  dds_entity_t participant,
  const dds_topic_descriptor_t *descriptor,
  const char *name,
  const dds_qos_t *qos,
  const dds_listener_t *listener);
DDS_EXPORT dds_entity_t
dds_create_reader(
  dds_entity_t participant_or_subscriber,
  dds_entity_t topic,
  const dds_qos_t *qos,
  const dds_listener_t *listener);
DDS_EXPORT dds_entity_t
dds_create_writer(
  dds_entity_t participant_or_publisher,
  dds_entity_t topic,
  const dds_qos_t *qos,
  const dds_listener_t *listener);
DDS_EXPORT dds_return_t
dds_write(dds_entity_t writer, const void *data);
DDS_EXPORT dds_return_t
dds_writecdr(dds_entity_t writer, struct ddsi_serdata *serdata);
DDS_EXPORT dds_return_t
dds_take(
  dds_entity_t reader_or_condition,
  void **buf,
  dds_sample_info_t *si,
  size_t bufsz,
  uint32_t maxs);
typedef dds_return_t (*dds_read_with_collector_fn_t) (
  void *arg,
  const dds_sample_info_t *si,
  const struct ddsi_sertype *st,
  struct ddsi_serdata *sd);
DDS_EXPORT dds_return_t
dds_take_with_collector (
  dds_entity_t reader_or_condition,
  uint32_t maxs,
  dds_instance_handle_t handle,
  uint32_t mask,
  dds_read_with_collector_fn_t collect_sample,
  void *collect_sample_arg);
DDS_EXPORT dds_return_t
dds_takecdr(
  dds_entity_t reader_or_condition,
  struct ddsi_serdata **buf,
  uint32_t maxs,
  dds_sample_info_t *si,
  uint32_t mask);